// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`privileges.sql > line 8 1`] = `
[
  "SET client_min_messages TO 'warning'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 27,
                  "sval": {
                    "sval": "warning",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "client_min_messages",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 10 1`] = `
[
  "DROP ROLE IF EXISTS regress_priv_group1",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "missing_ok": true,
            "roles": [
              {
                "RoleSpec": {
                  "location": 20,
                  "rolename": "regress_priv_group1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 13 1`] = `
[
  "DROP ROLE IF EXISTS regress_priv_user1",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "missing_ok": true,
            "roles": [
              {
                "RoleSpec": {
                  "location": 20,
                  "rolename": "regress_priv_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 21 1`] = `
[
  "SELECT lo_unlink(oid) FROM pg_largeobject_metadata WHERE oid >= 1000 AND oid < 3000 ORDER BY oid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 27,
                  "relname": "pg_largeobject_metadata",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oid",
                          },
                        },
                      ],
                      "location": 93,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "oid",
                                },
                              },
                            ],
                            "location": 17,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "lo_unlink",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 57,
                        },
                      },
                      "location": 61,
                      "name": [
                        {
                          "String": {
                            "sval": ">=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1000,
                          },
                          "location": 64,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 73,
                        },
                      },
                      "location": 77,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 3000,
                          },
                          "location": 79,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 69,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 23 1`] = `
[
  "RESET client_min_messages",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "client_min_messages",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 32 1`] = `
[
  "	-- duplicate
CREATE USER regress_priv_user6",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_priv_user6",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 41 1`] = `
[
  "GRANT regress_priv_user1 TO regress_priv_user2 WITH ADMIN OPTION",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_user1",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 28,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 52,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 46 1`] = `
[
  "REVOKE ADMIN OPTION FOR regress_priv_user1 FROM regress_priv_user2",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_user1",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 48,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 7,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 46 2`] = `
[
  " -- fail
REVOKE regress_priv_user1 FROM regress_priv_user2",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_user1",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 40,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 47 1`] = `
[
  " -- fail
SELECT member::regrole, admin_option FROM pg_auth_members WHERE roleid = 'regress_priv_user1'::regrole",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 51,
                  "relname": "pg_auth_members",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "member",
                              },
                            },
                          ],
                          "location": 16,
                        },
                      },
                      "location": 22,
                      "typeName": {
                        "location": 24,
                        "names": [
                          {
                            "String": {
                              "sval": "regrole",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 33,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "admin_option",
                          },
                        },
                      ],
                      "location": 33,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "roleid",
                        },
                      },
                    ],
                    "location": 73,
                  },
                },
                "location": 80,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 82,
                        "sval": {
                          "sval": "regress_priv_user1",
                        },
                      },
                    },
                    "location": 102,
                    "typeName": {
                      "location": 104,
                      "names": [
                        {
                          "String": {
                            "sval": "regrole",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 69 1`] = `
[
  " -- fail, dependency
REASSIGN OWNED BY regress_priv_user2 TO regress_priv_user4",
  {
    "stmts": [
      {
        "stmt": {
          "ReassignOwnedStmt": {
            "newrole": {
              "location": 61,
              "rolename": "regress_priv_user4",
              "roletype": "ROLESPEC_CSTRING",
            },
            "roles": [
              {
                "RoleSpec": {
                  "location": 39,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 71 1`] = `
[
  " -- still fail, REASSIGN OWNED doesn't help
DROP OWNED BY regress_priv_user2",
  {
    "stmts": [
      {
        "stmt": {
          "DropOwnedStmt": {
            "behavior": "DROP_RESTRICT",
            "roles": [
              {
                "RoleSpec": {
                  "location": 58,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 73 1`] = `
[
  " -- ok now, DROP OWNED does the job

-- test that removing granted role or grantee role removes dependency
GRANT regress_priv_user1 TO regress_priv_user3 WITH ADMIN OPTION",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_user1",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 135,
                  "rolename": "regress_priv_user3",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 159,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 78 1`] = `
[
  " -- should fail, dependency
DROP ROLE regress_priv_user4",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 38,
                  "rolename": "regress_priv_user4",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 79 1`] = `
[
  " -- ok
DROP ROLE regress_priv_user3",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 17,
                  "rolename": "regress_priv_user3",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 80 1`] = `
[
  " -- ok now
GRANT regress_priv_user1 TO regress_priv_user5 WITH ADMIN OPTION",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_user1",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 39,
                  "rolename": "regress_priv_user5",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 63,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 83 1`] = `
[
  " -- should fail, dependency
DROP ROLE regress_priv_user1, regress_priv_user5",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 38,
                  "rolename": "regress_priv_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
              {
                "RoleSpec": {
                  "location": 58,
                  "rolename": "regress_priv_user5",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 84 1`] = `
[
  " -- ok, despite order

-- recreate the roles we just dropped
CREATE USER regress_priv_user1",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_priv_user1",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 93 1`] = `
[
  "GRANT pg_read_all_data TO regress_priv_user6",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "pg_read_all_data",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 26,
                  "rolename": "regress_priv_user6",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 98 1`] = `
[
  "SET SESSION AUTHORIZATION regress_priv_user8",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_priv_user8",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 109 1`] = `
[
  "RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 122 1`] = `
[
  "  -- fail, no SET option any more
SET ROLE pg_read_all_stats",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 43,
                  "sval": {
                    "sval": "pg_read_all_stats",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 123 1`] = `
[
  "     -- fail, granted without SET option
RESET ROLE",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 129 1`] = `
[
  "DROP USER regress_priv_user10",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_priv_user10",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 133 1`] = `
[
  "CREATE GROUP regress_priv_group1",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_priv_group1",
            "stmt_type": "ROLESTMT_GROUP",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 136 1`] = `
[
  "ALTER GROUP regress_priv_group1 ADD USER regress_priv_user4",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 41,
                            "rolename": "regress_priv_user4",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rolemembers",
                  "location": 41,
                },
              },
            ],
            "role": {
              "location": 12,
              "rolename": "regress_priv_group1",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 138 1`] = `
[
  "GRANT regress_priv_group2 TO regress_priv_user2 GRANTED BY regress_priv_user1",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_group2",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 29,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "grantor": {
              "location": 59,
              "rolename": "regress_priv_user1",
              "roletype": "ROLESPEC_CSTRING",
            },
            "is_grant": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 141 1`] = `
[
  "	-- duplicate
ALTER GROUP regress_priv_group2 DROP USER regress_priv_user2",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": -1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 56,
                            "rolename": "regress_priv_user2",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rolemembers",
                  "location": 56,
                },
              },
            ],
            "role": {
              "location": 26,
              "rolename": "regress_priv_group2",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 150 1`] = `
[
  "CREATE FUNCTION leak(integer,integer) RETURNS boolean
  AS 'int4lt'
  LANGUAGE internal IMMUTABLE STRICT",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "leak",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "int4lt",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 56,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "internal",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 70,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "immutable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 88,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "strict",
                  "location": 98,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 21,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 46,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "bool",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 152 1`] = `
[
  "  -- but deliberately not LEAKPROOF
ALTER FUNCTION leak(integer,integer) OWNER TO regress_priv_user1",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOwnerStmt": {
            "newowner": {
              "location": 82,
              "rolename": "regress_priv_user1",
              "roletype": "ROLESPEC_CSTRING",
            },
            "object": {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 64,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objfuncargs": [
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 56,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 64,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "leak",
                    },
                  },
                ],
              },
            },
            "objectType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 157 1`] = `
[
  " -- error, doesn't have ADMIN OPTION
GRANT regress_priv_role TO regress_priv_user1 WITH ADMIN OPTION GRANTED BY CURRENT_ROLE",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_role",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 64,
                  "rolename": "regress_priv_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "grantor": {
              "location": 112,
              "roletype": "ROLESPEC_CURRENT_ROLE",
            },
            "is_grant": true,
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 88,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 159 1`] = `
[
  " -- error
REVOKE ADMIN OPTION FOR regress_priv_role FROM regress_priv_user1 GRANTED BY regress_priv_user2",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_role",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 57,
                  "rolename": "regress_priv_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "grantor": {
              "location": 87,
              "rolename": "regress_priv_user2",
              "roletype": "ROLESPEC_CSTRING",
            },
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 17,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 160 1`] = `
[
  " -- warning, noop
REVOKE ADMIN OPTION FOR regress_priv_role FROM regress_priv_user1 GRANTED BY CURRENT_USER",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_priv_role",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 65,
                  "rolename": "regress_priv_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "grantor": {
              "location": 95,
              "roletype": "ROLESPEC_CURRENT_USER",
            },
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 25,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 168 1`] = `
[
  "CREATE TABLE atest1 ( a int, b text )",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "atest1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 178 1`] = `
[
  "REVOKE ALL ON atest1 FROM PUBLIC",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 26,
                  "roletype": "ROLESPEC_PUBLIC",
                },
              },
            ],
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "atest1",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 181 1`] = `
[
  "GRANT ALL ON atest1 TO regress_priv_user2",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 23,
                  "rolename": "regress_priv_user2",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 13,
                  "relname": "atest1",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 185 1`] = `
[
  "CREATE TABLE atest2 (col1 varchar(10), col2 boolean)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "atest2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "col1",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "varchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 34,
                        },
                      },
                    ],
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "col2",
                  "is_local": true,
                  "location": 39,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 191 1`] = `
[
  "GRANT TRUNCATE ON atest2 TO regress_priv_user4 GRANTED BY regress_priv_user5",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 28,
                  "rolename": "regress_priv_user4",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "grantor": {
              "location": 58,
              "rolename": "regress_priv_user5",
              "roletype": "ROLESPEC_CSTRING",
            },
            "is_grant": true,
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "atest2",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "truncate",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 199 1`] = `
[
  " -- ok
SELECT * FROM atest2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "atest2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 200 1`] = `
[
  " -- ok
INSERT INTO atest1 VALUES (2, 'two')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 19,
              "relname": "atest1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 34,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "two",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 201 1`] = `
[
  " -- ok
INSERT INTO atest2 VALUES ('foo', true)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 19,
              "relname": "atest2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "foo",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {
                              "boolval": true,
                            },
                            "location": 41,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 202 1`] = `
[
  " -- fail
INSERT INTO atest1 SELECT 1, b FROM atest1",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 21,
              "relname": "atest1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 45,
                      "relname": "atest1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 35,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 35,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 203 1`] = `
[
  " -- ok
UPDATE atest1 SET a = 1 WHERE a = 2",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 14,
              "relname": "atest1",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 25,
                  "name": "a",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 29,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
                "location": 39,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 41,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 204 1`] = `
[
  " -- ok
UPDATE atest2 SET col2 = NOT col2",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 14,
              "relname": "atest2",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 25,
                  "name": "col2",
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "col2",
                                },
                              },
                            ],
                            "location": 36,
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 32,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 205 1`] = `
[
  " -- fail
SELECT * FROM atest1 FOR UPDATE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "atest1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "lockingClause": [
              {
                "LockingClause": {
                  "strength": "LCS_FORUPDATE",
                  "waitPolicy": "LockWaitBlock",
                },
              },
            ],
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 206 1`] = `
[
  " -- ok
SELECT * FROM atest2 FOR UPDATE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "atest2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "lockingClause": [
              {
                "LockingClause": {
                  "strength": "LCS_FORUPDATE",
                  "waitPolicy": "LockWaitBlock",
                },
              },
            ],
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 207 1`] = `
[
  " -- fail
DELETE FROM atest2",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 21,
              "relname": "atest2",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 208 1`] = `
[
  " -- fail
TRUNCATE atest2",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "atest2",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 209 1`] = `
[
  " -- fail
BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 211 1`] = `
[
  " -- fail
COMMIT",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 217 1`] = `
[
  "SELECT has_table_privilege('regress_readallstats','pg_backend_memory_contexts','SELECT')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 27,
                            "sval": {
                              "sval": "regress_readallstats",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 50,
                            "sval": {
                              "sval": "pg_backend_memory_contexts",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 79,
                            "sval": {
                              "sval": "SELECT",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "has_table_privilege",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 218 1`] = `
[
  " -- no

GRANT pg_read_all_stats TO regress_readallstats",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "pg_read_all_stats",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 35,
                  "rolename": "regress_readallstats",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 232 1`] = `
[
  "DROP ROLE regress_readallstats",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_readallstats",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 235 1`] = `
[
  "CREATE ROLE regress_group",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_group",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 240 1`] = `
[
  "GRANT regress_group TO regress_group_direct_manager WITH INHERIT FALSE, ADMIN TRUE",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_group",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 23,
                  "rolename": "regress_group_direct_manager",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "inherit",
                  "location": 57,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "admin",
                  "location": 72,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 260 1`] = `
[
  "CREATE ROLE regress_roleoption_protagonist",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_roleoption_protagonist",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 275 1`] = `
[
  " -- fails, can't be come donor
ALTER TABLE regress_roleoption.t2 OWNER TO regress_roleoption_recipient",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "newowner": {
                    "location": 74,
                    "rolename": "regress_roleoption_recipient",
                    "roletype": "ROLESPEC_CSTRING",
                  },
                  "subtype": "AT_ChangeOwner",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 43,
              "relname": "t2",
              "relpersistence": "p",
              "schemaname": "regress_roleoption",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 276 1`] = `
[
  " -- works
ALTER TABLE regress_roleoption.t3 OWNER TO regress_roleoption_protagonist",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "newowner": {
                    "location": 53,
                    "rolename": "regress_roleoption_protagonist",
                    "roletype": "ROLESPEC_CSTRING",
                  },
                  "subtype": "AT_ChangeOwner",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 22,
              "relname": "t3",
              "relpersistence": "p",
              "schemaname": "regress_roleoption",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`privileges.sql > line 277 1`] = `
[
  " -- works
ALTER TABLE regress_roleoption.t4 OWNER TO regress_roleoption_protagonist",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "newowner": {
                    "location": 53,
                    "rolename": "regress_roleoption_protagonist",
                    "roletype": "ROLESPEC_CSTRING",
                  },
                  "subtype": "AT_ChangeOwner",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 22,
              "relname": "t4",
              "relpersistence": "p",
              "schemaname": "regress_roleoption",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
